--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.2",
+    "@tanstack/react-query": "^5.90.1",
     "antd": "^5.27.4",
     "framer-motion": "^12.23.13",
     "lucide": "^0.544.0",
